crates/plotnik-lib/tests/02-parser/recovery_unclosed/missing_brace.txt
Q = {(a) (b)
------------------ DIAGNOSTICS -------------------
error: missing closing `}`
 --> query.ptk:1:5
  |
1 | Q = {(a) (b)
  |     -^^^^^^^
  |     |
  |     sequence started here
  |
help: add `}` to close the sequence
